@@ -7753,3 +7753,6 @@ EPRINTS-3.1-beta-2
  * Added get_primary_key() for MySQL by using DESCRIBE
  * Further fix for linking creators to browse views
 
+2008-09-25 tdb
+ * Reduced the memory requirement of in-memory phrases (3MB in testing)
+
